# ibus-byrninpikak

./: LICENSE  Makefile.am  README.md  configure.ac  ibus-byrninpikak.spec.in
engine/: Makefile.am  byrninpikak-python.xml.in.in  candidate.py  constants.py  engine.py  ibus-engine-byrninpikak.in  keyandstate.py  keycommands.py  keypatterns.py  main.py
